src/objects/PoC__c.object
<CustomObject>
    <description>Proof of Concept instances for Field Engineering</description>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Site</fullName>
                </value>
                <value>
                    <fullName>Amazon Web Services</fullName>
                </value>
                <value>
                    <fullName>Century Link</fullName>
                </value>
                <value>
                    <fullName>Durham</fullName>
                </value>
                <value>
                    <fullName>Google Cloud Platform</fullName>
                </value>
                <value>
                    <fullName>Google Compute</fullName>
                </value>
                <value>
                    <fullName>HP Helion</fullName>
                </value>
                <value>
                    <fullName>Microsoft Azure</fullName>
                </value>
                <value>
                    <fullName>OpenStack - Customer Premises</fullName>
                </value>
                <value>
                    <fullName>OpenStack - Service Provider</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Verizon</fullName>
                </value>
                <value>
                    <fullName>VMware vCHS</fullName>
                </value>
                <value>
                    <fullName>VMware vSphere - Customer Premises</fullName>
                </value>
                <value>
                    <fullName>VMware vSphere - Service Provider</fullName>
                </value>
                <value>
                    <fullName>Other Service Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>PoCs</relationshipLabel>
        <relationshipName>PoCs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PCF_Services__c</fullName>
        <label>PCF Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>App Analytics</fullName>
                </value>
                <value>
                    <fullName>App Distribution</fullName>
                </value>
                <value>
                    <fullName>Concourse</fullName>
                </value>
                <value>
                    <fullName>Data Sync</fullName>
                </value>
                <value>
                    <fullName>Gemfire for PCF</fullName>
                </value>
                <value>
                    <fullName>Kafka for PCF</fullName>
                </value>
                <value>
                    <fullName>MongoDB</fullName>
                </value>
                <value>
                    <fullName>MySQL</fullName>
                </value>
                <value>
                    <fullName>Neo4j</fullName>
                </value>
                <value>
                    <fullName>Pivotal Tracker</fullName>
                </value>
                <value>
                    <fullName>Push Notifications</fullName>
                </value>
                <value>
                    <fullName>RabbitMQ</fullName>
                </value>
                <value>
                    <fullName>Redis</fullName>
                </value>
                <value>
                    <fullName>Riak CS</fullName>
                </value>
                <value>
                    <fullName>Session State Caching</fullName>
                </value>
                <value>
                    <fullName>Single Sign-On</fullName>
                </value>
                <value>
                    <fullName>Spring Cloud Services</fullName>
                </value>
                <value>
                    <fullName>Spring Insight</fullName>
                </value>
                <value>
                    <fullName>SpringXD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paid_PoC_Amount__c</fullName>
        <label>Paid PoC Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paid_PoC__c</fullName>
        <label>Paid PoC?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PoC_Closed_Detail__c</fullName>
        <label>PoC Closed Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PoC_Phasex__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
                <value>
                    <fullName>Do Nothing</fullName>
                </value>
                <value>
                    <fullName>Qualified Out</fullName>
                </value>
                <value>
                    <fullName>Tech Loss</fullName>
                </value>
                <value>
                    <fullName>Tech Win</fullName>
                </value>
                <value>
                    <fullName>Waiting for Customer Decision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PoC_Name__c</fullName>
        <formula>&apos;PoC: &apos; + Opportunity__r.Account_Name__c + &apos; / &apos; + Opportunity__r.Name</formula>
        <label>PoC Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PoC_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PoC Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PoCs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PoC_Partner__c</fullName>
        <label>PoC Partner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PoC_Phasex__c</fullName>
        <label>PoC Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan</fullName>
                </value>
                <value>
                    <fullName>Execute</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PoC_Primary_Technical_Team__c</fullName>
        <inlineHelpText>Select the primary team executing the PoC.</inlineHelpText>
        <label>PoC Primary Technical Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Core FE</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>PDE</fullName>
                </value>
                <value>
                    <fullName>Data Science</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Product__c</fullName>
        <label>Primary Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Concourse</fullName>
                </value>
                <value>
                    <fullName>Gemfire</fullName>
                </value>
                <value>
                    <fullName>GPDB</fullName>
                </value>
                <value>
                    <fullName>Hawq</fullName>
                </value>
                <value>
                    <fullName>PHD</fullName>
                </value>
                <value>
                    <fullName>PivotalCF</fullName>
                </value>
                <value>
                    <fullName>RabbitMQ</fullName>
                </value>
                <value>
                    <fullName>Spring Boot</fullName>
                </value>
                <value>
                    <fullName>Spring Cloud</fullName>
                </value>
                <value>
                    <fullName>Spring Cloud Data Flow</fullName>
                </value>
                <value>
                    <fullName>SpringXD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Public_Cloud_Cost__c</fullName>
        <inlineHelpText>Enter the estimated or actual public cloud cost for AWS, Google Compute or HP Helion.</inlineHelpText>
        <label>Public Cloud Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Secondary_Product__c</fullName>
        <label>Secondary Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Concourse</fullName>
                </value>
                <value>
                    <fullName>Gemfire</fullName>
                </value>
                <value>
                    <fullName>GPDB</fullName>
                </value>
                <value>
                    <fullName>Hawq</fullName>
                </value>
                <value>
                    <fullName>PHD</fullName>
                </value>
                <value>
                    <fullName>PivotalCF</fullName>
                </value>
                <value>
                    <fullName>RabbitMQ</fullName>
                </value>
                <value>
                    <fullName>Spring Boot</fullName>
                </value>
                <value>
                    <fullName>Spring Cloud</fullName>
                </value>
                <value>
                    <fullName>Spring Cloud Data Flow</fullName>
                </value>
                <value>
                    <fullName>SpringXD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Success_Criteria__c</fullName>
        <label>Summary / Goals</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Tertiary_Product__c</fullName>
        <label>Tertiary Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Concourse</fullName>
                </value>
                <value>
                    <fullName>Gemfire</fullName>
                </value>
                <value>
                    <fullName>GPDB</fullName>
                </value>
                <value>
                    <fullName>Hawq</fullName>
                </value>
                <value>
                    <fullName>PHD</fullName>
                </value>
                <value>
                    <fullName>PivotalCF</fullName>
                </value>
                <value>
                    <fullName>RabbitMQ</fullName>
                </value>
                <value>
                    <fullName>Spring Boot</fullName>
                </value>
                <value>
                    <fullName>Spring Cloud</fullName>
                </value>
                <value>
                    <fullName>Spring Cloud Data Flow</fullName>
                </value>
                <value>
                    <fullName>SpringXD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Party_Product__c</fullName>
        <label>Third Party Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AppDynamics</fullName>
                </value>
                <value>
                    <fullName>Artifactory</fullName>
                </value>
                <value>
                    <fullName>CloudBees</fullName>
                </value>
                <value>
                    <fullName>CloudBees Jenkins Enterprise</fullName>
                </value>
                <value>
                    <fullName>CloudBees Jenkins Operations Center</fullName>
                </value>
                <value>
                    <fullName>Cognos</fullName>
                </value>
                <value>
                    <fullName>Dynatrace</fullName>
                </value>
                <value>
                    <fullName>GitLab</fullName>
                </value>
                <value>
                    <fullName>Grails</fullName>
                </value>
                <value>
                    <fullName>Groovy</fullName>
                </value>
                <value>
                    <fullName>Informatica</fullName>
                </value>
                <value>
                    <fullName>Microstrategy</fullName>
                </value>
                <value>
                    <fullName>New Relic</fullName>
                </value>
                <value>
                    <fullName>Spinnaker</fullName>
                </value>
                <value>
                    <fullName>Tableau</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PoC</label>
    <nameField>
        <displayFormat>PoC-{00000}</displayFormat>
        <label>PoC Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PoCs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Paid_PoC_Amount_Required</fullName>
        <active>true</active>
        <description>If Paid PoC, then Paid PoC Amount Required</description>
        <errorConditionFormula>TEXT (Paid_PoC__c) = &quot;Yes&quot; &amp;&amp;  Paid_PoC_Amount__c = 0</errorConditionFormula>
        <errorDisplayField>Paid_PoC_Amount__c</errorDisplayField>
        <errorMessage>If Paid PoC, then Paid PoC Amount Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PoCClosedDetails_required_if_PhaseClosed</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( TEXT(PoC_Closed_Detail__c )) &amp;&amp;  TEXT(PoC_Phasex__c) = &quot;Closed&quot;</errorConditionFormula>
        <errorDisplayField>PoC_Closed_Detail__c</errorDisplayField>
        <errorMessage>Please select a value for PoC Closed Details when closing the PoC</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PoC_Partner_Required</fullName>
        <active>true</active>
        <description>PoC Partner Name required if PoC Primary Technical Team equals Partner</description>
        <errorConditionFormula>TEXT ( PoC_Primary_Technical_Team__c ) = &quot;Partner&quot; &amp;&amp;   ISBLANK (PoC_Partner__c)</errorConditionFormula>
        <errorDisplayField>PoC_Partner__c</errorDisplayField>
        <errorMessage>PoC Partner Name required if PoC Primary Technical Team equals Partner</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Public_Cloud_Cost_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR (TEXT  (Location__c) = &quot;Google Compute&quot;, TEXT  (Location__c) =&quot;AWS&quot;, TEXT  (Location__c) =&quot;HP&quot;) 
&amp;&amp;  Public_Cloud_Cost__c  = 0</errorConditionFormula>
        <errorDisplayField>Public_Cloud_Cost__c</errorDisplayField>
        <errorMessage>If Location is AWS, Google Compute or HP, then Public Cloud Cost is required.</errorMessage>
    </validationRules>
</CustomObject>